@@ -3,9 +3,14 @@
 == 0.5.0 - unreleased
 
 :224: https://github.com/stackabletech/agent/pull/224[#224]
+:229: https://github.com/stackabletech/agent/pull/229[#229]
 
 === Added
 * `hostIP` and `podIP` added to the pod status ({224}).
+
+=== Fixed
+* Invalid or unreachable repositories are skipped when searching for
+  packages ({229}).
 
 == 0.4.0 - 2021-06-23
 
